--- a/workflows/Sync tasks automatically between Notion to Todoist.json
+++ b/workflows/Sync tasks automatically between Notion to Todoist.json
@@ -63,6 +63,7 @@
   },
   "createdAt": "2024-01-16T17:01:25.484Z",
   "id": "5WHSEhqPDbcjwpdi",
+  "isArchived": false,
   "meta": null,
   "name": "Sync tasks automatically between Notion to Todoist",
   "nodes": [
@@ -263,6 +264,15 @@
   "settings": {
     "executionOrder": "v1"
   },
+  "shared": [
+    {
+      "createdAt": "2024-01-16T17:01:25.488Z",
+      "updatedAt": "2024-01-16T17:01:25.488Z",
+      "role": "workflow:owner",
+      "workflowId": "5WHSEhqPDbcjwpdi",
+      "projectId": "1dpdX6PwTs6u06T1"
+    }
+  ],
   "staticData": null,
   "tags": [],
   "triggerCount": 1,
